--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,6 @@
 ---
 title: "Prognozēšanas metodes"
+author: "Kirils Volobujevs"
 ---
 
-This is a Quarto website.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-100+100+100
-```
